[package]
name = "mutex-traits"
version = "0.999.0"
authors.workspace = true
edition.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
description = "An abstraction over closure-based mutexes"

categories = [
    "embedded",
    "no-std",
]
documentation = "https://docs.rs/mutex-traits/"

[features]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
