[package]
name = "mutex-traits"
version = "1.0.1"
authors.workspace = true
edition.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
description = "An abstraction over closure-based mutexes"

categories = [
    "embedded",
    "no-std",
]
documentation = "https://docs.rs/mutex-traits/"

[dependencies]
const-init = "1.0"

[features]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
