[package]
name = "mutex"
version = "0.1.0"
description = "An abstraction over closure-based mutexes"
categories = [
    "embedded",
    "no-std",
]
documentation = "https://docs.rs/mutex/"
authors.workspace = true
edition.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.mutex-traits]
version = "1.0.0"
path = "../mutex-traits"

[dependencies.critical-section]
version = "1.1"
optional = true

[dependencies.lock_api-0_4]
package = "lock_api"
version = "0.4"
default-features = false
optional = true

[features]
default = [
    "impl-critical-section",
]
impl-critical-section = ["dep:critical-section"]
impl-unsafe-cortex-m-single-core = []
impl-lock_api-0_4 = ["dep:lock_api-0_4"]
# Enables `fmt::Debug` and `fmt::Display` implementations.
#
# These can be disabled when minimizing binary size is important.
fmt = []
std = []
