[package]
name = "scoped-mutex-traits"
version = "1.0.0"
authors = [
    "James Munns <james@onevariable.com>",
    "Eliza Weisman <eliza@elizas.website>",
]
edition = "2021"
readme = "../../README.md"
repository = "https://github.com/tosc-os/scoped-mutex"
description = "An abstraction over closure-based mutexes"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
documentation = "https://docs.rs/scoped-mutex/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

