[package]
name = "scoped-mutex-traits"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
description = "An abstraction over closure-based mutexes"

categories = [
    "embedded",
    "no-std",
]
documentation = "https://docs.rs/scoped-mutex-traits/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

