[package]
name = "scoped-mutex"
version = "0.1.0"
authors = [
    "James Munns <james@onevariable.com>",
    "Eliza Weisman <eliza@elizas.website>",
]
edition = "2021"
readme = "../../README.md"
repository = "https://github.com/tosc-os/scoped-mutex"
description = "An abstraction over closure-based mutexes"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
documentation = "https://docs.rs/scoped-mutex/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.scoped-mutex-traits]
version = "0.999"
path = "../scoped-mutex-traits"

[dependencies.critical-section]
version = "1.1"
optional = true

[features]
default = [
    "impl-critical-section",
]
impl-critical-section = ["dep:critical-section"]
impl-unsafe-cortex-m-single-core = []
std = []
