[package]
name = "scoped-mutex"
version = "0.1.0"
description = "An abstraction over closure-based mutexes"
categories = [
    "embedded",
    "no-std",
]
documentation = "https://docs.rs/scoped-mutex/"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.scoped-mutex-traits]
version = "1.0"
path = "../scoped-mutex-traits"

[dependencies.critical-section]
version = "1.1"
optional = true

[features]
default = [
    "impl-critical-section",
]
impl-critical-section = ["dep:critical-section"]
impl-unsafe-cortex-m-single-core = []
std = []
